stylesheets/styles.css
/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––

- Base Styles
- Logo
- Typography
- Buttons
- Hero Slider
- Sections
	- Section: Gallery
	- Section: Match the Pose

*/


/* Base Styles
–––––––––––––––––––––––––––––––––––––––––––––––––– */

html {
	background: url(http://www.portrait.gov.au/files/6/4/a/0/i5189.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover; }

	/* This is the black reduced-opacity overlay on top of the background image */
	html:after {
		content: "";
		background: rgba(0, 0, 0, 0.6);
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		position: fixed;
		z-index: -1; }

body {
	width: 100%;
	padding-top: 10%;
	font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
	line-height: 1.6;
	font-weight: 400;
	font-family: "myriad-pro-condensed", Helvetica, Arial, sans-serif;
	color: #fff; }


/* Logo
__________________________________________________ */

#logo {
	text-indent: -9999px;
	font-size: 0;
	display: block;
	max-width: 100%;
	min-height: 100px;
	background: url(https://s6.postimg.org/7hvcqwm5d/npg-print-inline_white.png) no-repeat center top;
	background-size: 100%;
	margin: 0 auto;
	padding-top: 5%; }


/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */

h2 {
	font-weight: 400;
	font-size: 6rem;
	line-height: .5;
	letter-spacing: .1rem; }

	h2#gallery-num {
		font-weight: 400;
		font-size: 6rem;
		line-height: .8;
		letter-spacing: .1rem;
		text-transform: uppercase; }

h3 {
	font-weight: 300;
	font-size: 3.5rem;
	line-height: 1;
	letter-spacing: .1rem; }

h4 {
	font-size: 1.8rem;
	line-height: 1;
	letter-spacing: .1rem; }

	h4.letsPlay {
		text-transform: uppercase; }

h5 {
	font-size: 1.5rem;
	line-height: 1; }

p {
	font-weight: 300;
	font-size: 2rem; }

.title {
	padding-bottom: 3%;	 }

.subtitle {
	font-size: 2.8rem; }


/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
	display: inline-block;
	width: 100%;
	height: 40px;
	color: #fff;
	text-align: center;
	font-size: .9em;
	font-weight: 400;
	line-height: 40px;
	letter-spacing: .1rem;
	text-transform: uppercase;
	text-decoration: none;
	white-space: nowrap;
	background-color: #b42b33;
	border-radius: 2px;
	cursor: pointer;
	box-sizing: border-box;
	outline: 0;
	border: 0; }

.button:hover,
button:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
.button:focus,
button:focus,
input[type="submit"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
  color: #fff;
  border-color: #888;
  outline: 0;
  background-color: rgba(181, 43, 52, 0.85); }

.backButton {
	font-size: 2.2rem;
	text-decoration: none;
	color: #b42b33;
	position: absolute;
	top: -40px;
	left: 0; }

	.backButton:hover,
	.backButton:focus {
		color: rgba(181, 43, 52, 0.85); }

	/* -- Go Back Icon -- */
	a .fa {
		padding-right: 5px; }

#selectPortraitButton {
	background-color: #5a5a5a;
	color: #fff;
	cursor: default;
	opacity: .8; }


/* Hero Slider - CW
–––––––––––––––––––––––––––––––––––––––––––––––––– */
	/*#hero1 {
		background-image: url(http://www.portrait.gov.au/files/9/9/8/4/i9686.jpg); }
	#hero2 {
		background-image: url(http://www.portrait.gov.au/files/c/0/0/e/i8548.jpg); }
	#hero3 {
		background-image: url(http://www.portrait.gov.au/files/4/f/5/a/i5381.jpg); }
	#hero4 {
		background-image: url(http://www.portrait.gov.au/files/f/c/3/f/i9682.jpg); }
	#hero5 {
		background-image: url(http://www.portrait.gov.au/files/8/2/d/2/i10008.jpg); }*/


.mySlides {
	content:"";
	width: 100%;
	min-height: 50%;
	max-height:50%;
	box-sizing: border-box;
	text-indent: -9999px;
	font-size: 0;
	display: block;
	background-size: 100%;
	margin-bottom: 5%;
	overflow: hidden;
	white-space: nowrap;
	top: 0;
	left: 0; }




/* Sections
–––––––––––––––––––––––––––––––––––––––––––––––––– */

section {
	padding-bottom: 2%; }

footer {
	padding: 20px 0;
	margin-bottom: 10px; }


/* Section: Gallery
–––––––––––––––––––––––––––––––––––––––––––––––––– */

#gallery {
	max-height: 600px;
	overflow: scroll;
	-webkit-overflow-scrolling: touch;  /* Alternate value is "auto" which stops scrolling immediately.
											See here for more info: https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-overflow-scrolling */
	overflow-x: hidden; }			

	#gallery .four.columns {
		padding: 0;
		display: inline-block; }

	#gallery img {
		box-sizing: border-box;
		width: 100%;
		height: auto;
		cursor: pointer; }

	/* -- Image Info -- */
	.imageTextBox {
	    position: relative;
		display: none; }

		.imageTextBox2 {
		    position: relative;
			display: block; }

		.imageInfo {
			position: absolute;
			bottom: 0;
			z-index: 15;
			padding: 20px;
			color: #fff;
			text-align: left; }

			.imageInfo h4,
			.imageInfo h5 {
				margin-bottom: 6px; }

			.imageTitle {
				text-transform: uppercase;
				font-size: 2.2rem; }

			.imageMats {
				text-transform: uppercase;
				letter-spacing: .05em;
				font-size: 1.5rem; }


/* Section: Match the Pose
–––––––––––––––––––––––––––––––––––––––––––––––––– */

#contentScreen4 {
	display: none; }

canvas {
	display: none; }

#artContainer {
	display: inline;
	width: 100%; }

#squarePose {
	width: 47.5%;
	float: right;
	overflow: hidden; }

    #poseVideo {
	    margin-left: -20%;
	    height: 100%;
		transform: rotateY(180deg);
		-moz-transform:rotateY(180deg);	}

    #poseImage {
	    margin-left: -20%;
	    display: none;
	    transform: rotateY(180deg);
		-moz-transform:rotateY(180deg);	}

.filterButton {
	float: right;
	width: 14.15%;
	height: 50px;
	line-height: 50px;
	background-color: rgba(0, 0, 0, 0.5);
	text-align: center;
	cursor: pointer;
	display: none;
	letter-spacing: .01em; }

	.filterButton:first-child {
		border-radius: 0 2px 2px 0; }

	.filterButton:last-child {
		border-radius: 2px 0 0 2px; }

#shareButton {
  display: none; }

#filterButtonsRow {
	padding-top: 10px; }

	.filterRange {
		text-align: right;
		font-size: 2em;
		display: none; }

		input[type=range] {
			width: 99%; }

		input[type=range]::-moz-range-track {
			height: 1px;
			background: #fff;
			cursor: pointer; }

		input[type=range]::-moz-range-thumb {
			border: 1px solid #fff;
			border-radius: 1px;
			height: 20px;
			width: 20px;
			background: #b42b33;
			cursor: pointer; }

